# calicolabs-piccolo

./: .gitignore  LICENSE.txt  README.md  concurrency_tools.py  pyproject.toml  ui_layout.py
.github/: CODEOWNERS
.github/workflows/: check-prettier-formatting.yml  release-new-version.yml  run-tests-formatting.yml  set-up-new-repo.yml
src/: data_generator.py
src/package_name/: __init__.py
src/piccolo/: __init__.py
